# NOTEMAN8WCS

./: NEXT_OBJECTIVE.md  README.md  pyproject.toml
docs/: CODING_TESTAMENT.md  OLLAMA_SCREENSHOT_PROPOSAL.md  ONTOLOGY.md  PLATFORM_PARITY_HANDOFF_TEMPLATE.md  REPOSITORY_STRATEGY.md  WORKFLOW_PROTOCOL.md  WORKSPACE_FORMAT.md
src/noteman_wcs/: __init__.py  desktop_app.py  domain.py  extraction.py  image_capture.py  prompts.py  storage.py
src/noteman_wcs/prompts/: academic-paraphrase.txt  citation-caution.txt  classroom-pedagogy-notes.txt  clean-ocr.txt  compare-with-thesis.txt  concept-map.txt  critical-commentary.txt  extract-keywords.txt  feynman-simple-explanation.txt  flashcards.txt  improve-my-note.txt  lecture-study-guide.txt  markdown-mind-map.txt  meeting-or-lecture-minutes.txt  prompt-minimizer.txt  question-based-reading.txt  research-paper-summary.txt  research-questions.txt  structured-bullet-summary.txt  summarize-research-note.txt  thesis-ready-note.txt  title-generator-academic.txt  tldr-facts-takeaways.txt
src/noteman_wcs/tools/: __init__.py  capture_screenshot.py
tests/: test_desktop_preferences.py  test_domain.py  test_prompts.py  test_screenshot_capture.py
